implement user service + fixes
